# rag-knowledge

./: .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DEVELOPMENT-PLAN.md  KB_MCP_DEVELOPMENT.md  LICENSE  README-zh.md  README.md  config.yml  config.yml.example  docker-compose.yml  ragctl  ragctl.bat  ragctl.cmd  settings_page.html  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  start-web.bat  start-web.sh  start.bat  start.sh
.claude/: collection-report.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.omp/: mcp.json
backend/: .gitignore  README-zh.md  README.md  config.yml  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: README.md
backend/app/api/routes/: __init__.py  config.py  config_schema.py  experience.py  graph.py  health.py  mineru.py  parse.py  search.py  system.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  experience_models.py  schemas.py  search_models.py
backend/app/services/: embedding_service.py  experience_meditation_service.py  experience_service.py  graph_service.py  keyword_index_service.py  mineru_service.py  storage_reader_service.py  two_stage_search_service.py  vector_service.py
backend/app/utils/: __init__.py  atomic_io.py  download_model.py  mineru_manager.py  paths.py  safe_paths.py
backend/tests/: conftest.py  test_atomic_io.py  test_parse_async.py  test_platform.py  test_safe_paths.py  test_unit.py
books/: catalog.json  catalog.md
command/: README.md  package-lock.json  package.json  ragctl  ragctl.bat  ragctl.js
commands/: ragctl.md
docs/: ARCHITECTURE.md  DESKTOP-APP.md  EXPERIENCE-ENHANCEMENT-PLAN.md  OPTIMIZATION-PLAN.md  PRODUCTION-PLAN.md  VECTOR_GRAPH_RAG_DEVELOPMENT.md  index.html  skill-test-report-20260715.md  skill-test-report-20260719.md
kb-mcp/: .gitignore  README-zh.md  README.md  _run_all.py  client.py  config.py  docker-compose.yml  plugin_install.py  project_manager.py  pyproject.toml  server.py  task_registry.py  test_smoke.py
kb-mcp/kb_client/: __init__.py  client.py
kb-mcp/tests/: __init__.py  test_mcp_full_suite.py  test_project_update.py  test_protocol.py  test_server.py
plans/: EXPERIENCE-MECHANISM-SUMMARY.md  EXPERIENCE-V2-COMPLETION-SUMMARY.md  experience-mechanism-design.md  optimization-phase-2.md
scripts/: SKILL-TEST-PROMPT.md  backup.sh  cleanup_orphan_collections.py  debug-experience.py  debug-storage-root.py  detect_gpu.cjs  diagnose_vector.py  fix_yaml_index.py  full-system-test-report.md  install_omp.cjs  knowledge-system-full-skill-scenario-test-report.md  mcp-tools-test-result.md  quick-config-check.py  restore.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  start-prod.sh  start-web.bat  start-web.sh  stop.sh  test-all-env-scenarios.py  test-config-and-mcp-e2e.py  test-everything-e2e.py  test-experience-e2e.py  test-experience-http-e2e.py  test-experience-vector.py  test-mcp-prod-ready.py  test-mcp-startup-mode.py  test-mcp-tools-e2e.py  test-skill-system-e2e.py  test-vector-storage-e2e.py  validate_skills.cjs  verification-report.md  verify-env.py
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
tests/: check_details.mjs  check_services.py  cleanup_test_docs.py  e2e_comprehensive.mjs  e2e_full_interaction.mjs  e2e_test.mjs  take_screenshots.mjs  test_all_apis.mjs  test_all_skills.py  test_api.ps1  test_edge_cases.py  test_frontend.ps1  test_full_system.py  test_integration.mjs  test_integration.py  test_page_content.ps1  test_rest_api.py  test_search_detailed.ps1  test_skill_scenarios.py  test_vfcr_search.py  verify_agent_consistency.py  verify_skill_tools.mjs  visual_check.mjs
web/: .gitignore  .patch  README-zh.md  (+7 more)
(+217 files in other folders)
