[project]
name = "kb-mcp"
version = "1.0.0"
description = "MCP server + decoupled kb_client for the RAG Knowledge Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
kb-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb_client"]
only-include = ["server.py", "client.py", "kb_client"]
