[package]
name = "rag-knowledge-desktop"
version = "1.0.0"
description = "RAG Knowledge Platform Desktop — 一键启动 / 检测 / 修复 控制台"
authors = ["kingdol"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "process"] }

[features]
# 默认 dev 走源码目录；custom-protocol 用于打包后的静态资源加载
default = []
custom-protocol = ["tauri/custom-protocol"]
